# groktest

./: .gitignore  pyproject.toml
src/: config.py  database.py  main.py
src/database/: database.py
src/logs/: logger.py
